--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>관리자 로그인</title>
-    <link rel="stylesheet" th:href="@{/css/common.css}">
-    <link rel="stylesheet" th:href="@{/css/admin.css}">
-</head>
+<head th:replace="~{common/fragments/head :: adminHead('관리자 로그인')}"></head>
 <body class="login-page">
-    <div class="login-container">
-        <div class="login-box">
-            <h1 class="login-title">🔐 관리자 로그인</h1>
-            
-            <form action="/admin/login/process" method="post" class="login-form">
-                <div class="form-group">
-                    <label for="username">아이디</label>
-                    <input type="text" id="username" name="username" required placeholder="아이디를 입력하세요">
-                </div>
-                
-                <div class="form-group">
-                    <label for="password">비밀번호</label>
-                    <input type="password" id="password" name="password" required placeholder="비밀번호를 입력하세요">
-                </div>
+<div class="login-container">
+    <div class="login-box">
+        <h1 class="login-title">🎵 Song Quiz<br>관리자</h1>
 
-                <div th:if="${error}" class="error-message">
-                    <span th:text="${error}"></span>
-                </div>
+        <div th:if="${error}" class="error-message" th:text="${error}"></div>
 
-                <button type="submit" class="login-btn">로그인</button>
-            </form>
+        <form action="/admin/login-process" method="post" class="login-form">
+            <div class="form-group">
+                <label for="username">아이디</label>
+                <input type="text" id="username" name="username" required autofocus>
+            </div>
+            <div class="form-group">
+                <label for="password">비밀번호</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="login-btn">로그인</button>
+        </form>
 
-            <a href="/" class="back-link">← 홈으로 돌아가기</a>
-        </div>
+        <a href="/" class="back-link">← 홈으로 돌아가기</a>
     </div>
+</div>
 </body>
 </html>
